Fix 500 on practice submit when attempt matches a topic
KnowledgeGraphService.getPrerequisites/getDependents returned immutable
lists (Stream.toList), and propagateBoost (and findRelatedTopics) called
addAll on them, throwing UnsupportedOperationException whenever an attempt
matched a concept with prerequisites (e.g. Monotonic Stack -> stack).
Return mutable lists instead.